--- a/Tailwind - Simple Parallax Background Images/package.json
+++ b/Tailwind - Simple Parallax Background Images/package.json
@@ -4,6 +4,7 @@
   "description": "- 따라한 코드 : https://codepen.io/codetimeio/pen/mGxvXd",
   "main": "index.js",
   "scripts": {
+    "dev" : " npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
